Closed Bug 301631 Opened 21 years ago Closed 21 years ago

Invalid PostScript comment header generated

Categories

(Core :: Printing: Output, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: caillon, Assigned: caillon)

Details

Attachments

(1 file)

%%BoundingBox takes only integer arguments, per the PostScript DSC spec: http://partners.adobe.com/public/developer/en/ps/5001.DSC_Spec.pdf (see section 5.1, page 39) There was a DSC header Comment Extension specification put in place http://partners.adobe.com/public/developer/en/ps/5644.Comment_Ext.pdf which allows a new comment header, %%HiResBoundingBox takes floating point numbers, however it recommends using both %%HiResBoundingBox and %%BoundingBox as older viewers may not support %%HiResBoundingBox Yes, there are some viewers which cannot view the output postscript. See https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=163684
Attached patch PatchSplinter Review
Fixes this, and very minor cleanup.
Attachment #190056 - Flags: superreview?(shaver)
Attachment #190056 - Flags: review?(cbiesinger)
Attachment #190056 - Flags: review?(cbiesinger) → review?(kherron+mozilla)
Comment on attachment 190056 [details] [diff] [review] Patch Because HiResBoundingBox is an extension, it would be nice to add a comment referencing the technical note. Looks fine, otherwise.
Attachment #190056 - Flags: review?(kherron+mozilla) → review+
Comment on attachment 190056 [details] [diff] [review] Patch sr+a=shaver
Attachment #190056 - Flags: superreview?(shaver)
Attachment #190056 - Flags: superreview+
Attachment #190056 - Flags: approval1.8b4+
Commited to cvs HEAD 2005-07-26 08:54 PDT.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: