%%BoundingBox takes integer arguments %%HiResBoundingBox takes floating point arguments, but is a DSC extension. Output both so postscript readers that accept the extension can use it, and those that don't have valid output.

Bug 301631
r=kherron, sr=shaver, a=shaver